Crash in [@ nsGlobalWindowOuter::Print]
Categories
(Core :: Printing: Setup, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox79 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | fixed |
firefox82 | --- | fixed |
People
(Reporter: aryx, Assigned: emilio)
References
(Regression)
Details
(Keywords: crash, regression, Whiteboard: [print2020_v81])
Crash Data
Attachments
(1 file)
Bug 1661446 - Don't assert that we still have a document in nsGlobalWindowOuter::Print. r=smaug,nika
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
4 installations have reported this failure so far, changes indicate it's from bug 1636728.
Crash report: https://crash-stats.mozilla.org/report/index/c8cefce3-7b37-4040-ac3a-067db0200826
Top 10 frames of crashing thread:
0 xul.dll nsGlobalWindowOuter::Print dom/base/nsGlobalWindowOuter.cpp:5254
1 xul.dll nsGlobalWindowInner::PrintPreview dom/base/nsGlobalWindowInner.cpp:3611
2 xul.dll mozilla::dom::Window_Binding::printPreview dom/bindings/WindowBinding.cpp:3205
3 xul.dll mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::MaybeCrossOriginObjectThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3227
4 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:599
5 xul.dll Interpret js/src/vm/Interpreter.cpp:3336
6 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:636
7 xul.dll JS_CallFunctionValue js/src/jsapi.cpp:2768
8 xul.dll nsXPCWrappedJS::CallMethod js/xpconnect/src/XPCWrappedJSClass.cpp:963
9 xul.dll PrepareAndDispatch xpcom/reflect/xptcall/md/win32/xptcstubs_x86_64.cpp:168
Assignee | ||
Updated•5 years ago
|
Comment 1•5 years ago
|
||
Only 4 of 17 crash reports have Fission enabled, so this crash is not a Fission bug.
![]() |
||
Comment 2•5 years ago
|
||
15 via Window_Binding::printPreview
2 via Window_Binding::print
Assignee | ||
Comment 3•5 years ago
|
||
Even though the outer comes from the inner, and the inner always checks
HasActiveDocument(), that seems to be a bit of a lie, insofar
HasActiveDocument() only checks IsCurrentActiveWindow(), and that can
return true for an already-discarded page.
Throwing in this case seems acceptable.
Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 5•5 years ago
|
||
bugherder |
Comment 6•5 years ago
•
|
||
Note that when I tried to do print-preview https://www.instrupix.com/wprm_print/recipe/5935 by pressing "Print" button in the document in a container tab (for bug 1661867), I get
[Child 198774, Main Thread] WARNING: '!docToPrint', file central/dom/base/nsGlobalWindowOuter.cpp, line 5288
which is the line what Emilio added in this bug.
So, I am 100% sure it's a test case caused this crash. (it still causes hang on the print preview window on my Linux box)
Comment 7•5 years ago
|
||
Also note that a browser mochitest I posted in bug 1661867 comment 6 could be also an automated test case for this. (I've confirmed that the test crashes without the fix for this bug).
Updated•5 years ago
|
![]() |
||
Updated•5 years ago
|
![]() |
||
Comment 8•5 years ago
|
||
Comment on attachment 9172660 [details]
Bug 1661446 - Don't assert that we still have a document in nsGlobalWindowOuter::Print. r=smaug,nika
Beta/Release Uplift Approval Request
- User impact if declined: Printing project fix
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky):
- String changes made/needed:
Comment 9•5 years ago
|
||
Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.
Updated•5 years ago
|
Comment 10•5 years ago
|
||
Comment on attachment 9172660 [details]
Bug 1661446 - Don't assert that we still have a document in nsGlobalWindowOuter::Print. r=smaug,nika
Approved for 81.0b6.
Comment 11•5 years ago
|
||
bugherder uplift |
Updated•5 years ago
|
Description
•