Bug 1661446 - Don't assert that we still have a document in nsGlobalWindowOuter::Print. r=smaug, a=RyanVM

Even though the outer comes from the inner, and the inner always checks
HasActiveDocument(), that seems to be a bit of a lie, insofar
HasActiveDocument() only checks IsCurrentActiveWindow(), and that can
return true for an already-discarded page.

Throwing in this case seems acceptable.

Differential Revision: https://phabricator.services.mozilla.com/D88586